--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
-  "name": "frontend-template",
+  "name": "framework-frontend-template",
   "version": "1.0.0",
-  "description": "micro location platform sdk api server",
-  "main": "index.js",
+  "description": "",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "amqp-queue": "gongxiancao/amqp-queue",
     "async": "1.5.2",
+    "bcryptjs": "2.3.0",
+    "bluebird": "3.3.4",
     "body-parser": "1.15.0",
+    "co": "4.6.0",
     "connect-multiparty": "2.0.0",
     "framework": "gongxiancao/framework",
     "framework-config": "gongxiancao/framework-config",
@@ -21,27 +25,58 @@
     "framework-express-route": "gongxiancao/framework-express-route",
     "framework-model": "gongxiancao/framework-model",
     "framework-service": "gongxiancao/framework-service",
-    "lodash": "4.5.0"
+    "gulp-cdnizer": "^1.1.7",
+    "gulp-flatten": "^0.3.1",
+    "gulp-qiniu": "^0.2.4",
+    "jwt-simple": "0.4.1",
+    "kue": "0.10.5",
+    "lodash": "4.5.0",
+    "migrate": "0.2.2",
+    "mongodb": "2.1.6",
+    "mongodb-uri": "0.9.7",
+    "node-uuid": "1.4.7",
+    "operational-error": "gongxiancao/operational-error",
+    "passport": "0.3.2",
+    "passport-http-bearer": "1.0.1",
+    "request": "2.69.0",
+    "simple-token-client": "gongxiancao/simple-token-client",
+    "winston": "^2.2.0"
   },
   "devDependencies": {
-    "del": "2.2.0",
-    "fs-extra": "^0.26.5",
+    "del": "^2.0.2",
+    "fs-extra": "0.26.5",
     "gulp": "3.9.1",
+    "gulp-clean-css": "^2.0.4",
     "gulp-cucumber": "0.0.17",
+    "gulp-foreach": "^0.1.0",
+    "gulp-html2js": "^0.4.2",
+    "gulp-if": "^2.0.0",
+    "gulp-inject": "^3.0.0",
     "gulp-jshint": "2.0.0",
+    "gulp-less-sourcemap": "^1.4.3",
+    "gulp-livereload": "^3.8.1",
     "gulp-load-plugins": "1.2.0",
+    "gulp-ng-annotate": "^2.0.0",
+    "gulp-nodemon": "^2.0.6",
+    "gulp-plumber": "^1.1.0",
     "gulp-protractor": "^3.0.0",
+    "gulp-rev": "^7.0.0",
+    "gulp-rev-replace": "^0.4.3",
+    "gulp-sort": "^2.0.0",
+    "gulp-uglify": "^1.5.3",
+    "gulp-useref": "^3.0.7",
     "gulp-util": "3.0.7",
+    "gulp-watch": "^4.3.5",
+    "gulp-wiredep": "0.0.0",
     "jshint": "2.9.1",
     "jshint-stylish": "2.1.0",
     "merge-stream": "^1.0.0",
-    "node-uuid": "^1.4.7",
     "open": "0.0.5",
-    "request": "^2.69.0",
+    "request": "2.69.0",
     "require-dir": "0.3.0",
-    "run-sequence": "^1.2.2",
-    "should": "^8.2.2",
+    "run-sequence": "^1.1.5",
+    "should": "8.2.2",
     "through": "2.3.8",
-    "wiredep": "^4.0.0"
+    "wiredep": "^3.0.0"
   }
 }
