name framework to ofa

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "framework-frontend-template",
+  "name": "ofa-frontend-template",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -15,15 +15,15 @@
     "body-parser": "1.15.0",
     "co": "4.6.0",
     "connect-multiparty": "2.0.0",
-    "framework": "gongxiancao/framework",
-    "framework-config": "gongxiancao/framework-config",
-    "framework-controller": "gongxiancao/framework-controller",
-    "framework-env": "gongxiancao/framework-env",
-    "framework-express": "gongxiancao/framework-express",
-    "framework-express-policy": "gongxiancao/framework-express-policy",
-    "framework-express-route": "gongxiancao/framework-express-route",
-    "framework-model": "gongxiancao/framework-model",
-    "framework-service": "gongxiancao/framework-service",
+    "ofa": "1.0.0",
+    "ofa-config": "1.0.0",
+    "ofa-controller": "1.0.0",
+    "ofa-env": "1.0.0",
+    "ofa-express": "1.0.0",
+    "ofa-express-policy": "1.0.0",
+    "ofa-express-route": "1.0.0",
+    "ofa-model": "1.0.0",
+    "ofa-service": "1.0.0",
     "jwt-simple": "0.4.1",
     "lodash": "4.5.0",
     "migrate": "0.2.2",
